// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`publishAssets(tag, files, options) - 500 error 1`] = `"Error: Asset build server responded with an error. Original message: Server error. Status code: 500. URL: http://127.0.0.1publish-assets?rebundle=true"`;

exports[`publishAssets(tag, files, options) - css 1`] = `
Object {
  "data": Array [
    Object {},
    Object {},
    Object {},
    Object {},
  ],
  "tag": "podlet1",
  "type": "css",
}
`;

exports[`publishAssets(tag, files, options) - js - minify options 1`] = `
Object {
  "minify": "true",
  "rebundle": "true",
  "sourceMaps": "true",
}
`;

exports[`publishAssets(tag, files, options) - js - query params 1`] = `
Array [
  Object {
    "minify": "true",
    "rebundle": "true",
  },
  Object {
    "rebundle": "true",
  },
  Object {
    "rebundle": "true",
    "sourceMaps": "true",
  },
  Object {
    "rebundle": "true",
  },
  Object {
    "rebundle": "true",
  },
  Object {
    "rebundle": "true",
  },
]
`;

exports[`publishAssets(tag, files, options) - js - query params overrides options 1`] = `
Object {
  "rebundle": "true",
}
`;

exports[`publishAssets(tag, files, options) - js 1`] = `
Object {
  "data": Array [
    Object {},
    Object {},
    Object {},
    Object {},
  ],
  "tag": "podlet1",
  "type": "js",
}
`;

exports[`publishInstructions(tag, type, data) - 500 1`] = `[Error: Asset build server responded with an error. Original message: Server error.]`;

exports[`publishInstructions(tag, type, data) - css 1`] = `
Object {
  "data": Array [
    "a12das3d.json",
    "12da321fd.json",
  ],
  "tag": "layout",
  "type": "css",
}
`;

exports[`publishInstructions(tag, type, data) - js - options 1`] = `
Object {
  "minify": "true",
  "sourceMaps": "true",
}
`;

exports[`publishInstructions(tag, type, data) - js - query params 1`] = `
Array [
  Object {
    "minify": "true",
  },
  Object {},
  Object {
    "sourceMaps": "true",
  },
  Object {},
  Object {},
  Object {},
]
`;

exports[`publishInstructions(tag, type, data) - js - query params overrides options 1`] = `Object {}`;

exports[`publishInstructions(tag, type, data) - js 1`] = `
Object {
  "data": Array [
    "a12das3d.json",
    "12da321fd.json",
  ],
  "tag": "layout",
  "type": "js",
}
`;
